infra/k8s/base/control-plane.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: control-plane
  namespace: wordfleet
spec:
  replicas: 2
  selector:
    matchLabels:
      app: control-plane
  template:
    metadata:
      labels:
        app: control-plane
    spec:
      containers:
        - name: control-plane
          image: us-central1-docker.pkg.dev/wordfleet-487310/wordfleet/control-plane:beta
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 8
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 15
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 800m
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: control-plane
  namespace: wordfleet
spec:
  selector:
    app: control-plane
  ports:
    - port: 80
      targetPort: 8080
